[package]
name = "data-query"
version = "0.1.5"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
edition = "2021"
description = "Query library that allows for Querying Serializable data using string queries"
readme = "README.md"
categories = [""]
keywords = ["serde", "query"]
license = "MIT"
repository = "https://github.com/nebula-technologies/data-query"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
jq = []

[dependencies]
railsgun = "1.0.3"
regex = "1.5.6"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
data-query-proc = "^0.1"
data-query-lexical = "^0.1"
jq-rs = { version = "0.4.1", features = [] }
